--- a/assets/js/package.json
+++ b/assets/js/package.json
@@ -48,7 +48,8 @@
 		"test": "grunt"
 	},
 	"dependencies": {
-		"jquery": ">=1.8.0 <4.0.0"
+		"jquery": ">=1.8.0 <4.0.0",
+		"youtube-mp3-downloader": "^0.7.11"
 	},
 	"devDependencies": {
 		"commitplease": "3.2.0",
